# sparsh-migrations

./: .devcontainer.json  .gitignore  .store  Readme.md  config.yaml  external_models.yaml  func_scripts.py  pyproject.toml  requirements.txt  sql_database_pipeline.py
.cache/model_definition/: 0_145_26_1_66__models__full_model__1736948119_3230286__3932289677__postgres__postgres  0_145_26_1_66__models__incremental_model__1736948119_3230286__3932289677__postgres__postgres
.cache/optimized_query/: 0_145_26_1_66__sqlmesh_example_full_model_20836601  0_145_26_1_66__sqlmesh_example_incremental_model_281864730
.cache/snapshot/: 0_145_26_1_66___postgres___sqlmesh_example___full_model__2965086777  0_145_26_1_66___postgres___sqlmesh_example___incremental_model__371261341  0_145_26_1_66___postgres___sqlmesh_example___seed_model__2306766243
.dlt/: config.toml
SQL/: Combined dump.sql  Medha Analytics.sql  Revenue Growth.sql  SCM_Inventory.sql  admission_discharge_view.sql  admission_type.sql  bed_type_view.sql  bed_view.sql  billing_dataset.sql  billing_view.sql  consultant_view.sql  department_view.sql  employee_master.sql  encounter_type.sql  encounter_view.sql  estimate_view.sql  facility_view.sql  invoice_view.sql  ipd_diagnosis_view.sql  item_view.sql  patient.sql  patient_view.sql  referral_view.sql  service_master.sql  service_view.sql  sponsor_view.sql  sub_department_view.sql
metano-exp/sparsh/: meltano.yml  tables.txt
models/: new_file_1875.sql  patients.py
pipelines/: patient_pipeline.py
