[project]
name = "sparsh-migrations-kubernetes-v2"
version = "0.1.0"
description = ""
authors = [
    {name = "neutralboy",email = "leopoorna99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "sqlmesh[postgres,web] (>=0.146.0,<0.147.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)"
]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.poetry.scripts]
plan-dev = "sqlmesh plan dev"
